# platform.core.telephony.call-manager

./: CMakeLists.txt
callmgr-popup/: CMakeLists.txt  org.tizen.callmgr-popup.efl  org.tizen.callmgr-popup.manifest  org.tizen.callmgr-popup.rule  org.tizen.callmgr-popup.xml  tizen-manifest.xml
callmgr-popup/include/: callmgr-popup-common.h  callmgr-popup-dbus-if.h  callmgr-popup-debug.h  callmgr-popup-util.h  callmgr-popup-vconf.h  callmgr-popup-widget.h
callmgr-popup/res/edc/: popup_custom.edc
callmgr-popup/res/po/: CMakeLists.txt  ar.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  kn.po  ko_KR.po  lt.po  lv.po  mk.po  ml.po  (+22 more)
callmgr-popup/src/: callmgr-popup-dbus-if.c  callmgr-popup-main.c  callmgr-popup-util.c  callmgr-popup-vconf-dummy.c  callmgr-popup-vconf-ext.c  callmgr-popup-vconf.c  callmgr-popup-widget.c
common/: CMakeLists.txt
common/include/: callmgr-log.h  callmgr-util.h  callmgr-vconf.h
common/src/: callmgr-util-dummy.c  callmgr-util-ext.c  callmgr-util.c  callmgr-vconf-dummy.c  callmgr-vconf-ext.c  callmgr-vconf.c
introspection/: call-manager.xml
module/: CMakeLists.txt
module/include/: callmgr-answer-msg.h  callmgr-audio.h  callmgr-bt.h  callmgr-contact.h  callmgr-ringer.h  callmgr-sensor.h  callmgr-telephony.h  callmgr-vr.h
module/src/: callmgr-answer-msg.c  callmgr-audio-dummy.c  callmgr-audio-ext.c  callmgr-audio.c  callmgr-bt.c  callmgr-contact.c  callmgr-ringer.c  callmgr-sensor.c  callmgr-telephony-ecc.c  callmgr-telephony.c  callmgr-vr.c
packaging/: call-manager.spec  callmgr.conf
resource/: callmgr.service  mdbus2
service/: CMakeLists.txt
service/include/: callmgr-core.h  callmgr-dbus.h
service/src/: callmgr-core.c  callmgr-dbus.c  callmgr-main.c
silent_log/: CMakeLists.txt  call-logger.service  call_silent_log_dump.sh  call_silent_logger
