CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_PREFIX "\${prefix}")
SET(LIBDIR ${LIB_INSTALL_DIR})
SET(INCLUDEDIR "\${prefix}/include")
SET(PKGCONFIGDIR "${PREFIX}/lib/pkgconfig" CACHE PATH PKGCONFIGDIR)
SET(CMAKE_INSTALL_PREFIX "${PREFIX}")
SET(INTROSPECTION "${CMAKE_SOURCE_DIR}/introspection")
SET(CLIENTLIB "callmgr")
SET(MODULE_RES_DIR "${PREFIX}/share/call-manager")

##Address-Space Layout Randomization
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIE")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pie")

ADD_DEFINITIONS("-DFEATURE_DLOG_DEBUG")
ADD_DEFINITIONS("-DVERSION=\"${VERSION}\"")
ADD_DEFINITIONS("-DMODULE_RES_DIR=\"${MODULE_RES_DIR}\"")
ADD_DEFINITIONS("-DEXPORT_API=__attribute__((visibility(\"default\")))")
IF (TIZEN_SOUND_ROUTING_FEATURE)
ADD_DEFINITIONS("-DTIZEN_SOUND_ROUTING_FEATURE")
ENDIF (TIZEN_SOUND_ROUTING_FEATURE)

# Call Manager Client API
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(module)
ADD_SUBDIRECTORY(service)
ADD_SUBDIRECTORY(callmgr-popup)
